<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="nav_label_highlights">View highlights</string>
    <string name="highlights_pagetitle">Saved highlights</string>
    <string name="no_highlights_text">No saved highlights</string>
    <string name="add_fab_cont_desc">Add highlight</string>
    <string name="highlight_item_saved_on_template">Saved on: %s</string>
    <string name="highlight_item_delete_cont_desc">Delete button</string>
    <string name="gethighlights_error_message">Error retrieving saved highlights.</string>
    <string name="permission_denied_error_message">Please allow access to take picture to scan text for highlights.</string>
    <string name="camera_permission_rationale_title">Camera access needed</string>
...
