...
            modifier = Modifier
                .padding(contentPadding)
                .focusRequester(focusRequester)
                .fillMaxWidth(),
            inputField = {
                SearchBarDefaults.InputField(
                    modifier = Modifier.testTag("SearchBookTextField"),
                    query = text,
                    onQueryChange = {
                        text = it
                        if (text.length > 3) {
                            searchForBooks(text)
                        }
...
